--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "prisma:push": "prisma db push",
-    "prisma:studio": "prisma studio",
-    "prisma:clean": "rimraf node_modules/.prisma"
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^6.17.0",
+    "@prisma/client": "^6.17.1",
     "axios": "^1.11.0",
     "next": "15.4.6",
     "nodemailer": "^7.0.6",
@@ -26,7 +25,7 @@
     "@types/nodemailer": "^7.0.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "prisma": "^6.17.0",
+    "prisma": "^6.17.1",
     "rimraf": "^6.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
