--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "dependencies": {
     "@prisma/client": "^6.17.1",
     "axios": "^1.11.0",
+    "install": "^0.13.0",
     "next": "15.4.6",
     "nodemailer": "^7.0.6",
+    "npm": "^11.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-toastify": "^11.0.5"
+    "react-sweetalert2": "^0.6.0",
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.26.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
