--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-  "postinstall": "prisma generate",
+    "postinstall": "prisma generate",
     "prisma:push": "prisma db push",
     "prisma:studio": "prisma studio"
   },
@@ -15,12 +15,12 @@
     "@prisma/client": "^5.22.0",
     "axios": "^1.11.0",
     "install": "^0.13.0",
-    "next": "15.4.6",
+    "next": "^16.0.7",
     "nodemailer": "^7.0.6",
     "npm": "^11.6.2",
     "prisma": "^5.22.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.26.2"
   },
