--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-toastify": "^11.0.5",
-    "sweetalert2": "^11.26.2"
+    "sweetalert2": "^11.26.2",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
