--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.22.0",
     "axios": "^1.11.0",
     "install": "^0.13.0",
+    "lucide-react": "^0.561.0",
     "next": "^16.0.7",
     "nodemailer": "^7.0.6",
     "npm": "^11.6.2",
