--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.26",
     "install": "^0.13.0",
     "lucide-react": "^0.561.0",
     "next": "^16.0.7",
